Added theme and fonts and CPP_SRC_DIR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,11 @@ project (imgui-glfw)
 
 set(CMAKE_CXX_STANDARD 14)
 
+set(CMAKE_BUILD_TYPE "Debug")
+
+add_definitions("-DCPP_SRC_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}/\"")
+
+
 add_subdirectory(modules)
 add_subdirectory(src)
 
