--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required (VERSION 3.5)
 project (imgui-glfw)
 
 set(CMAKE_CXX_STANDARD 14)
-
-set(CMAKE_BUILD_TYPE "Debug")
+set(CMAKE_CXX_STANDARD_LIBRARIES "${CMAKE_CXX_STANDARD_LIBRARIES} -static-libgcc -static-libstdc++ -static -pthread -Wl,--whole-archive -lpthread -Wl,--no-whole-archive")
+set(CMAKE_BUILD_TYPE "Release")
 
 add_definitions("-DCPP_SRC_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}/\"")
 
