added all stuffs related to the image, size of exec is 970ko

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,25 @@
 
+# Set some Win32 Specific Settings
+IF(WIN32)
+SET(GUI_TYPE WIN32)
+ENDIF(WIN32)
+# Set some Apple MacOS Specific settings
+IF (APPLE)
+SET(GUI_TYPE MACOSX_BUNDLE)
+ENDIF (APPLE)
+
+#TODO remove next line for release and change bool to 1
+UNSET(GUI_TYPE)
+SET(COMPRESS 0)
+
+
 list(APPEND MAIN_APP_SOURCES
         main.cpp
         implementation/imgui_impl_opengl3.h
         implementation/imgui_impl_opengl3.cpp
         implementation/imgui_impl_glfw.h
         implementation/imgui_impl_glfw.cpp
+        implementation/stb_image.h
         glad/glad.h
         glad/glad.c
         KHR/khrplatform.h
@@ -21,18 +36,24 @@ list(APPEND MAIN_APP_INCLUDE_DIRS
         )
 
 set(NAME imgui-glfw)
-add_executable(${NAME} ${MAIN_APP_SOURCES})
+add_executable(${NAME} ${GUI_TYPE} ${MAIN_APP_SOURCES})
 target_include_directories(${NAME} PUBLIC ${MAIN_APP_INCLUDE_DIRS})
 target_link_libraries(${NAME} ${MAIN_APP_LIBRARIES})
+IF(COMPRESS)
+add_custom_command(TARGET ${NAME} POST_BUILD COMMAND upx.exe --brute ${NAME}.exe USES_TERMINAL)
+ENDIF(COMPRESS)
 
 list(APPEND GUI_APP_SOURCES
-        gui.cc
+        gui.cpp
         implementation/imgui_impl_opengl3.h
         implementation/imgui_impl_opengl3.cpp
         implementation/imgui_impl_glfw.h
         implementation/imgui_impl_glfw.cpp
+        implementation/stb_image.h
         glad/glad.h
         glad/glad.c
+        ressources/pillars.c
+        ressources/pillars.h
         KHR/khrplatform.h
         )
 
@@ -47,6 +68,10 @@ list(APPEND GUI_APP_INCLUDE_DIRS
         )
 
 set(NAME gui-test)
-add_executable(${NAME} ${GUI_APP_SOURCES})
+add_executable(${NAME} ${GUI_TYPE} ${GUI_APP_SOURCES})
 target_include_directories(${NAME} PUBLIC ${GUI_APP_INCLUDE_DIRS})
 target_link_libraries(${NAME} ${GUI_APP_LIBRARIES})
+
+IF(COMPRESS)
+add_custom_command(TARGET ${NAME} POST_BUILD COMMAND upx.exe --brute ${NAME}.exe USES_TERMINAL)
+ENDIF(COMPRESS)
